Значения вынесены в переменные